--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Quick English Test</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link rel="shortcut icon" href="assets/british_flag.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="./assets/british_flag.ico" type="image/x-icon">
+  <link rel="stylesheet" href="./css/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
@@ -39,7 +39,7 @@
   </div>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-  <script src="js/index.js"></script>
+  <script src="./js/index.js"></script>
 
 </body>
 
