--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
   </div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='./jquery.min.js'></script>
 
   <script src="./js/index.js"></script>
 
