minor design changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="https://medzed.github.io/Quick_English_Test/assets/test_your_english.jpg" />
-  <meta property="og:description" content="Test your English quickly by answering these 20 simple questions." />
+  <meta property="og:description" content="A simple and quick English test composed from 20 questions." />
   <meta property="og:url" content="https://medzed.github.io/Quick_English_Test" />
   <meta property="og:title" content="Quick English Test" />
   <title>Quick English Test</title>
