added facebook share

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://medzed.github.io/Quick_English_Test/assets/test_your_english.jpg" />
-  <meta property="og:description" content="A simple and quick English test composed from 20 questions." />
-  <meta property="og:url" content="https://medzed.github.io/Quick_English_Test" />
-  <meta property="og:title" content="Quick English Test" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:image"         content="https://medzed.github.io/Quick_English_Test/assets/test_your_english.jpg" />
+  <meta property="og:description"   content="A simple and quick English test composed from 20 questions." />
+  <meta property="og:url"           content="https://medzed.github.io/Quick_English_Test" />
+  <meta property="og:title"         content="Quick English Test" />
   <title>Quick English Test</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
@@ -28,7 +29,7 @@
 
         <div style="min-height:70vh" class="panel panel-primary">
 <div class="panel-heading">
-  <h3 class="panel-title">Quick english test</h3>
+  <h3 class="panel-title">Quick english test </span></h3>
 </div>
 <div class="panel-body">
   <h1 id="quiz-name"></h1>
@@ -39,10 +40,21 @@
 <div id="quiz-results">
   <p id="quiz-results-message"></p>
   <p id="quiz-results-score"></p>
+  <p>
+    <a style="text-decoration: none;" id="quiz-results-share-score" title="send to Facebook" href=""
+      target="_blank">
+      <span style="background-color: #3b5998; border:none;" class="btn btn-primary" >
+   Share on Facebook 
+  </span>
+    </a>
+    <a style="background-color: #e74c3c; border:none; color:#ffffff !important;" class="btn btn-primary" href="https://medzed.github.io/Quick_English_Test/">
+      Repeat <span class="glyphicon  glyphicon-repeat"></span>
+    </a>
+  </p>
 </div>
 </div>
 <hr>
-<span> Made with <i class="glyphicon glyphicon-heart"></i> by <a href="https://github.com/MedZed" target="_blank">Med Zed</a></span>
+<span id="made"> Made with <i class="glyphicon glyphicon-heart"></i> by <a href="https://github.com/MedZed" target="_blank">Med Zed</a></span>
 </div>
 </div>
 
